Add Documentation & Refactor Functions